fixed table data spacing issues for mobile devices

--- a/code/mpc/src/styles/globals.css
+++ b/code/mpc/src/styles/globals.css
@@ -300,11 +300,11 @@ table {
   border: solid 2px rgba(37, 70, 91, 0.88);
   border-collapse: collapse;
   background-color: var(--color-background-table);
-  table-layout: fixed;
+  table-layout: auto;
   margin: 1%;
   padding: 1%;
   font-size: 90%;
-  width: 90%;
+  width: fit-content;
   font-family: sans-serif;
 }
 
@@ -347,9 +347,9 @@ td {
   margin: 1%;
   padding: 1%;
   text-align: center;
-  font-size: 91%;
+  font-size: 95%;
+  width: 1%;
   font-family: sans-serif;
-
 }
 
 td:nth-child(1) {
